# react-native-fabric-rich-text

./: .coderabbit.yaml  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FabricHtmlText.podspec  FabricRichText.podspec  LICENSE  README.md  eslint.config.mjs  jest.config.js  jest.resolver.web.js  owasp-suppressions.xml  package.json  react-native.config.js  semgrep.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
.specify/memory/: constitution.md
android/: build.gradle  ci.sh  gradle.properties  settings.gradle
android/jni/: CMakeLists.txt
android/src/main/jni/: CMakeLists.txt
android/src/main/jni/react/renderer/components/FabricHTMLTextSpec/: FabricHTMLTextState.cpp  FabricHTMLTextState.h  ShadowNodes.cpp  ShadowNodes.h
android/src/main/jni/react/renderer/components/FabricRichTextSpec/: FabricHTMLTextState.h  FabricRichTextState.cpp  ShadowNodes.cpp  ShadowNodes.h
cpp/: FabricHTMLParser.cpp  FabricHTMLParser.h  FabricMarkupParser.cpp  FabricMarkupParser.h  FabricRichParser.cpp  FabricRichParser.h  FabricRichParserLibxml2.cpp  FabricRichParserLibxml2.h
cpp/parsing/: AttributedStringBuilder.cpp  AttributedStringBuilder.h  DirectionContext.cpp  DirectionContext.h  HtmlSegmentParser.cpp  HtmlSegmentParser.h  MarkupSegmentParser.cpp  MarkupSegmentParser.h  StyleParser.cpp  StyleParser.h  TextNormalizer.cpp  TextNormalizer.h  UnicodeUtils.cpp  UnicodeUtils.h
docs/: nativewind-setup.md  web-integration.md
docs/architecture/: README.md  SYSTEM-SPECIFICATION.md
e2e/: .gitignore  package.json  tsconfig.json  wdio.conf.ts
e2e/fixtures/: html-samples.ts
e2e/helpers/: index.ts  screenshot.ts  wait.ts
e2e/scripts/: build-ios.sh
example/: Gemfile  app.json  babel.config.js  jest.config.js  jest.setup.js  package.json  tailwind.config.js
example-web/: empty.js  eslint.config.mjs  jest.config.js  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
example-web/__tests__/integration/: basic.test.tsx  styling.test.tsx  truncation.test.tsx
example-web/__tests__/ssr/: sanitize-ssr.test.ts
example-web/__tests__/unit/: HTMLText.test.tsx  HTMLText.web.accessibility.test.tsx  RichText.test.tsx  RichText.web.accessibility.test.tsx  styling.test.tsx
example-web/app/: globals.css  layout.tsx  page.tsx
example-web/app/basic/: page.tsx
example-web/app/rtl/: page.tsx
example-web/app/styling/: page.tsx
example-web/app/truncation/: page.tsx
example-web/components/: CodeBlock.tsx  DemoSection.tsx  Navigation.tsx
example-web/types/: react-native-fabric-html-text.d.ts  react-native-fabric-rich-text.d.ts
example/__mocks__/: nativewind.js  react-native-fabric-html-text-nativewind.js  react-native-fabric-html-text.js  react-native-fabric-rich-text-nativewind.js  react-native-fabric-rich-text.js  styleMock.js
example/__tests__/: App.test.tsx
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile  setup_tests.rb
example/ios/FabricHtmlTextExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/FabricHtmlTextExample.xcodeproj/: project.pbxproj
example/ios/FabricHtmlTextExample.xcworkspace/: contents.xcworkspacedata
example/ios/FabricHtmlTextTests/: AccessibilityContainerTests.swift  FabricHTMLListsTests.mm  FabricHTMLParserTests.mm  FabricHTMLSanitizerTests.swift  FabricHTMLStylingTests.mm  LinkBoundsTests.swift  TestHelpers.swift
example/ios/FabricRichTextExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/FabricRichTextExample.xcodeproj/: project.pbxproj
example/ios/FabricRichTextExample.xcworkspace/: contents.xcworkspacedata
example/ios/FabricRichTextExampleTests/: AccessibilityContainerTests.swift  FabricRichFragmentParserTests.mm  FabricRichLinksTests.mm  FabricRichListsTests.mm  FabricRichParserTests.mm  FabricRichRTLTests.mm  FabricRichSanitizerTests.swift  FabricRichStylingTests.mm  FabricRichTextExampleTests.m  Info.plist  LinkBoundsTests.swift
example/src/: App.tsx
ios/: FabricGeneratedConstants.swift  FabricHTMLCoreTextView.h  FabricHTMLCoreTextView.m  FabricHTMLFragmentParser.h  FabricHTMLFragmentParser.mm  FabricHTMLLinkAccessibilityElement.h  FabricHTMLLinkAccessibilityElement.m  FabricHTMLParsingUtils.h  FabricHTMLParsingUtils.mm  FabricHTMLSanitizer.swift  FabricHTMLText.h  FabricHTMLText.mm  FabricHTMLTextComponentDescriptor.h  FabricHTMLTextShadowNode.h  FabricHTMLTextShadowNode.mm  FabricHtmlTextView.h  FabricHtmlTextView.mm  FabricRichCoreTextView.h  FabricRichCoreTextView.m  FabricRichDebugDrawingHelper.h  FabricRichDebugDrawingHelper.m  FabricRichFragmentParser.h  FabricRichFragmentParser.mm  FabricRichLinkAccessibilityElement.h  FabricRichLinkAccessibilityElement.m  FabricRichLinkDetectionManager.h  FabricRichLinkDetectionManager.m  FabricRichParsingUtils.h  FabricRichParsingUtils.mm  FabricRichSanitizer.swift  FabricRichText.h  FabricRichText.mm  FabricRichTextAccessibilityHelper.h  FabricRichTextAccessibilityHelper.m  FabricRichTextComponentDescriptor.h  FabricRichTextShadowNode.h  FabricRichTextShadowNode.mm  FabricRichTextTruncationEngine.h  FabricRichTextTruncationEngine.m  FabricRichTextTypes.h  (+4 more)
ios/Resources/ar.lproj/: Localizable.strings
ios/Resources/bg.lproj/: Localizable.strings
ios/Resources/en.lproj/: Localizable.strings
scripts/: README.md  translate.js  translations.json
src/: FabricHTMLTextNativeComponent.ts  FabricHtmlTextViewNativeComponent.ts  FabricRichTextNativeComponent.ts  index.tsx  index.web.tsx  nativewind.ts  strings.json
src/__tests__/: FabricHTMLTextNativeComponent.test.tsx  FabricRichTextNativeComponent.test.tsx  HTMLText.test.tsx  RichText.test.tsx  index.test.tsx
src/adapters/: native.tsx
src/components/: HTMLText.tsx  HTMLText.web.tsx  RichText.tsx  RichText.web.tsx
src/core/: allowedHtml.ts  constants.ts  sanitize.ts  sanitize.web.ts
src/types/: HTMLTextNativeProps.ts  RichTextNativeProps.ts  codegen.d.ts
(+75 files in other folders)
